objects/USA_Objective_Stat__c.object
<CustomObject>
    <description>Data-Driven Objectives to be completed by Sales Team</description>
    <fields>
        <fullName>USA_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Objective Stats</relationshipLabel>
        <relationshipName>Objective_Stats</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>USA_Brand__c</fullName>
        <description>The brand to which this objective relates</description>
        <inlineHelpText>The brand to which this objective relates</inlineHelpText>
        <label>Brand</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USA_Closed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Closed by user</description>
        <inlineHelpText>Closed by user</inlineHelpText>
        <label>Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>USA_Description__c</fullName>
        <description>Description of the objective</description>
        <inlineHelpText>Description of the objective</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>USA_High_Priority__c</fullName>
        <defaultValue>false</defaultValue>
        <label>High Priority</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>USA_Is_Active_Objective__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Objective is open and needs to be completed</description>
        <inlineHelpText>Objective is open and needs to be completed</inlineHelpText>
        <label>Is Active Objective</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>USA_Last_Updated__c</fullName>
        <description>Date upon which information from the Data Warehouse was last updated.</description>
        <inlineHelpText>Date upon which information from the Data Warehouse was last updated.</inlineHelpText>
        <label>Last Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>USA_Objective_Type__c</fullName>
        <description>Indicates whether this record is related to spend information or compliance</description>
        <inlineHelpText>Indicates whether this record is related to spend information or compliance</inlineHelpText>
        <label>Objective Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Spend</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>USA_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Objective_Stat</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>USA_Product_Category__c</fullName>
        <description>Type of product</description>
        <inlineHelpText>Type of product</inlineHelpText>
        <label>Product Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Wines</fullName>
                </value>
                <value>
                    <fullName>Spirits</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>USA_Sort_Order__c</fullName>
        <description>The order upon which this objective is displayed in the mobile UI</description>
        <label>Sort Order</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>USA_Update_Frequency__c</fullName>
        <label>Update Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>USA_Wines_Objective__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that this objective is for wines</description>
        <label>Wines Objective</label>
        <type>Checkbox</type>
    </fields>
    <label>Objective Stat</label>
    <nameField>
        <displayFormat>OBJ-{0000}</displayFormat>
        <label>Objective Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Objective Stats</pluralLabel>
    <recordTypes>
        <fullName>USA_Spirits_Objective_Stat</fullName>
        <active>true</active>
        <description>Objectives for Spirits</description>
        <label>USA Spirits Objective Stat</label>
    </recordTypes>
    <recordTypes>
        <fullName>USA_Wines_Objective_Stat</fullName>
        <active>true</active>
        <description>Objectives for Wines</description>
        <label>USA Wines Objective Stat</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>